Misc: install toplevel lib and tools in a separate package

--- a/.gitignore
+++ b/.gitignore
@@ -24,16 +24,16 @@
 *.map
 lib/stubs.c
 lib/lib_version.ml
-lib/toplevel/jsooTopError.ml
+toplevel/lib/jsooTopError.ml
 lib/META
 runtime/runtime.js
-toplevel/toplevel.js
-toplevel/test_dynlink.js
-toplevel/eval.js
-toplevel/toplevel-fs.js
-toplevel/*.cmis.js
-toplevel/server
-toplevel/toplevel.ml
+toplevel/examples/toplevel.js
+toplevel/examples/test_dynlink.js
+toplevel/examples/eval.js
+toplevel/examples/toplevel-fs.js
+toplevel/examples/*.cmis.js
+toplevel/examples/server
+toplevel/examples/toplevel.ml
 examples/wiki/wikicreole.ml
 examples/*/*.js
 compiler/js_of_ocaml
@@ -41,12 +41,12 @@ compiler/jsoo_minify
 compiler/jsoo_link
 compiler/lib/compiler_version.ml
 compiler/man
-jsoo_tools/jsoo_mktop
-jsoo_tools/jsoo_mkcmis
-jsoo_tools/jsoo_listunits
-jsoo_tools/jsoo_mktop.opt
-jsoo_tools/jsoo_mkcmis.opt
-jsoo_tools/jsoo_listunits.opt
+toplevel/bin/jsoo_mktop
+toplevel/bin/jsoo_mkcmis
+toplevel/bin/jsoo_listunits
+toplevel/bin/jsoo_mktop.opt
+toplevel/bin/jsoo_mkcmis.opt
+toplevel/bin/jsoo_listunits.opt
 compiler/lib/util.ml
 doc/api/html
 benchmarks/build
