--- a/toplevel/bin/Makefile
+++ b/toplevel/bin/Makefile
@@ -1,5 +1,5 @@
-include ../Makefile.conf
--include ../Makefile.local
+include ../../Makefile.conf
+-include ../../Makefile.local
 
 ifeq "${WITH_TOPLEVEL}${WITH_FINDLIB}" "YESYES"
 ALL= $(MKTOP) $(MKCMIS) $(LISTUNITS)
@@ -21,19 +21,20 @@ opt: jsoo_mkcmis.opt jsoo_mktop.opt jsoo_listunits.opt
 
 %.cmo: %.ml
 %.cmx: %.ml
+
 jsoo_mktop.cmo jsoo_mkcmis.cmo jsoo_listunits.cmo: jsoo_common.cmo
 jsoo_mktop.cmx jsoo_mkcmis.cmx jsoo_listunits.cmx: jsoo_common.cmx
-jsoo_common.cmo jsoo_common.cmx: ../compiler/lib/js_of_ocaml_compiler.cmi
+jsoo_common.cmo jsoo_common.cmx: ../../compiler/lib/js_of_ocaml_compiler.cmi
 
 OCAMLC=ocamlfind ocamlc     -w +A-4-7-9-37-38-41-44-45-58
 OCAMLOPT=ocamlfind ocamlopt -w +A-4-7-9-37-38-41-44-45-58
 
-%.byte: ../compiler/lib/js_of_ocaml_compiler.cma ../compiler/findlib_support/jsoo_findlib_support.cma jsoo_common.cmo %.cmo
+%.byte: ../../compiler/lib/js_of_ocaml_compiler.cma ../../compiler/findlib_support/jsoo_findlib_support.cma jsoo_common.cmo %.cmo
 	$(OCAMLC) -linkpkg -linkall -g $(SAFESTRING) \
 	${addprefix -package , $(PACKAGES)} \
 	$^ -o $@
 
-%.opt: ../compiler/lib/js_of_ocaml_compiler.cmxa ../compiler/findlib_support/jsoo_findlib_support.cmxa jsoo_common.cmx %.cmx
+%.opt: ../../compiler/lib/js_of_ocaml_compiler.cmxa ../../compiler/findlib_support/jsoo_findlib_support.cmxa jsoo_common.cmx %.cmx
 	$(OCAMLOPT) -linkpkg -linkall -g $(SAFESTRING) \
 	${addprefix -package , $(PACKAGES)} \
 	$^ -o $@
@@ -41,12 +42,12 @@ OCAMLOPT=ocamlfind ocamlopt -w +A-4-7-9-37-38-41-44-45-58
 %.cmo: %.ml
 	$(OCAMLC) -c -g $(SAFESTRING) \
 	${addprefix -package , $(PACKAGES)} \
-	-I ../compiler/lib/ $< -o $@
+	-I ../../compiler/lib/ $< -o $@
 
 %.cmx: %.ml
 	$(OCAMLOPT) -c -g $(SAFESTRING) \
 	${addprefix -package , $(PACKAGES)} \
-	-I ../compiler/lib/ $< -o $@
+	-I ../../compiler/lib/ $< -o $@
 
 clean:
 	rm -f *.cm[xioa] *.[ao] *.so *.cmx[sa] *.byte *.opt $(MKTOP) $(MKCMIS)
