--- a/compiler/findlib_support/Makefile
+++ b/compiler/findlib_support/Makefile
@@ -1,26 +1,18 @@
-
 include ../../Makefile.conf
+include ../../Makefile.filelist
 
-PACKAGES=
-
-ifeq "${WITH_FINDLIB}" "YES"
-PACKAGES+= findlib
-FINDLIB_SUPPORT=jsoo_findlib_support.cma \
-                jsoo_findlib_support.cmx \
-                jsoo_findlib_support.cmxa \
-                jsoo_findlib_support.cmxs
-endif
-
-all: $(FINDLIB_SUPPORT)
-
-../lib/js_of_ocaml_compiler.cmo:
-	$(MAKE) -C ../lib/ js_of_ocaml_compiler.cmo
-
-../lib/js_of_ocaml_compiler.cmx:
-	$(MAKE) -C ../lib/ js_of_ocaml_compiler.cmx
+PACKAGES=findlib
 
 OCAMLC=ocamlfind ocamlc -g  -w +A-4-7-9-37-38-41-44-45-58
 OCAMLOPT=ocamlfind ocamlopt -g -w +A-4-7-9-37-38-41-44-45-58
+
+all: $(FINDLIB_INSTALL)
+
+../lib/js_of_ocaml_compiler.cmo: ../lib
+	$(MAKE) -C ../lib/ js_of_ocaml_compiler.cmo
+
+../lib/js_of_ocaml_compiler.cmx: ../lib
+	$(MAKE) -C ../lib/ js_of_ocaml_compiler.cmx
 
 jsoo_findlib_support.cmo: ../lib/js_of_ocaml_compiler.cmo
 jsoo_findlib_support.cmx: ../lib/js_of_ocaml_compiler.cmx
@@ -44,8 +36,7 @@ jsoo_findlib_support.cmxs: jsoo_findlib_support.cmxa
 	$(OCAMLC) -I ../lib $(SAFESTRING) ${addprefix -package , $(PACKAGES)} -c $<
 
 clean:
-	rm -f *.cm[aiox] *.cmxa *.cmxs *.o *.a *.conflicts
-	rm -f lib/*.cm[aiox] lib/*.cmxa lib/*.cmxs lib/*.o lib/*.a
+	rm -f *.cm[aiox] *.cmxa *.cmxs *.o *.a
 
 .PHONY: depend
 depend: jsoo_findlib_support.ml
