--- a/js_of_ocaml-ocamlbuild.opam
+++ b/js_of_ocaml-ocamlbuild.opam
@@ -8,8 +8,8 @@ dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
 name: "js_of_ocaml-ocamlbuild"
 version: "dev"
 
-build:   [ make "-C" "ocamlbuild" ]
-install: [ make "-C" "ocamlbuild" "install-meta" ]
+build:   [ make "build-ocamlbuild" ]
+install: [ make "install-ocamlbuild" ]
 remove:  [ "ocamlfind" "remove" "js_of_ocaml-ocamlbuild" ]
 
 depends: [ "ocamlbuild" ]
