--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -4,7 +4,7 @@ include ../Makefile.conf
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js file/unix.js
 OCAMLC=ocamlfind ocamlc $(SAFESTRING) -package lwt,deriving -ppx ../lib/ppx/ppx_js.byte ../lib/syntax/pa_deriving_Json.cmo -I ../lib -I ../lib/deriving_json
-STDLIB=$(LIBNAME).cma
+STDLIB=$(LIBRARY).cma
 
 
 %.js: %.byte $(COMP) $(JSFILES)
