--- a/Makefile.conf
+++ b/Makefile.conf
@@ -12,7 +12,6 @@ DLLEXT := .so
 ####
 
 LIBRARY  := js_of_ocaml
-LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 MINIFIER := jsoo_minify$(EXEEXT)
 LINKER   := jsoo_link$(EXEEXT)
@@ -21,9 +20,16 @@ MKCMIS   := jsoo_mkcmis$(EXEEXT)
 LISTUNITS := jsoo_listunits$(EXEEXT)
 
 PPX   := ppx_js$(EXEEXT)
-# opt/byte
-BEST := opt
 
+NATIVE ?= YES
+NATIVE_DYN ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
+
+# opt/byte
+ifeq "$(NATIVE)" "YES"
+BEST := opt
+else
+BEST := byte
+endif
 
 DOCOPT := -colorize-code -short-functors -charset utf-8
 
@@ -52,7 +58,7 @@ WITH_ASYNC ?= $(shell if [ -f `ocamlfind query async_kernel 2> /dev/null`/async_
 
 WITH_FINDLIB?=YES
 
-NATDYNLINK ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
+WITH_LWT?=YES
 
 WITH_PPX_TOOLS ?= $(shell if [ -f `ocamlfind query ppx_tools 2> /dev/null`/ppx_tools.cma ]; then echo YES; else echo NO; fi)
 
@@ -63,7 +69,7 @@ WITH_PPX_DRIVER ?= $(shell if [ -f `ocamlfind query ppx_driver 2> /dev/null`/ppx
 ##disabled for ocaml < 4.02.2
 ifeq "${WITH_PPX_TOOLS}" "YES"
 ifneq ($(shell ocamlc -version | grep -q -E "4.02.[01]"; echo $$?),0)
-WITH_PPX ?= YES
+WITH_PPX?=YES
 WITH_TOPLEVEL=YES
 endif
 endif
