Misc: Use .exe extension when using native Windows ports. fix #544

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -4,6 +4,13 @@ BINDIR := `dirname  \`which ocamlc\``
 
 ####
 
+EXEEXT := $(shell ocamlc -config  | (grep -q -E "system: (win|mingw)" && echo ".exe"))
+OBJEXT := .o
+LIBEXT := .a
+DLLEXT := .so
+
+####
+
 LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
@@ -22,10 +29,6 @@ DOCOPT := -colorize-code -short-functors -charset utf-8
 
 ####
 
-EXEEXT :=
-OBJEXT := .o
-LIBEXT := .a
-DLLEXT := .so
 
 ifeq ($(shell ocamlc -config | grep -q "architecture: i386"; echo $$?),0)
 ARCH_32BIT=YES
