--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -4,7 +4,7 @@ include ../../Makefile.filelist
 
 COMP=../../compiler/$(COMPILER)
 JSFILES=../../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -g -package lwt,uchar -ppx ../../lib/ppx/ppx_js.byte -I ../../lib
+OCAMLC=ocamlfind ocamlc -g -package lwt,uchar -ppx ../../ppx/ppx_js/bin/ppx_js.byte -I ../../lib
 STDLIB=$(LIBRARY).cma
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
